# FlowDeck

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-apk.yml  release.yml
desktop/: .env.example  package-lock.json  package.json  test_uwp.ps1  test_uwp2.ps1
desktop/src/: App.css  App.tsx
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_discovery.rs  clipboard.rs  connection_manager.rs  db.rs  executor.rs  file_transfer.rs  lib.rs  main.rs  monitor.rs  network.rs  url_metadata.rs  websocket.rs
desktop/src-tauri/src/plugins/: mod.rs
desktop/src/components/: CustomSelect.tsx  DialogSystem.tsx  EmptyState.tsx  ToastSystem.tsx
desktop/src/config/: constants.ts  theme.ts
desktop/src/pages/: Actions.tsx  ClipboardPanel.tsx  Dashboard.tsx  Monitor.tsx  Settings.tsx  Transfers.tsx
desktop/src/store/: uiStore.ts
docs/: architecture.md  database.md  protocol.md  roadmap.md
mobile/: .env.example  App.tsx  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/src/components/: ActionButton.tsx  AlertSystem.tsx  CameraScannerOverlay.tsx  EmptyState.tsx  GlassCard.tsx  Header.tsx  SectionHeader.tsx  StatusBadge.tsx  ToastSystem.tsx
scratch/: check-db.py  test_client.js
shared/: constants.ts  package-lock.json  package.json  protocol.ts  test-zod.ts  tsconfig.json  types.ts  validators.ts
shared/utils/: id.ts
(+31 files in other folders)
